# Seglab

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml
configs/datasets/: chase.yaml  drive.yaml  kvasir.yaml  sl_ssdd.yaml  stare.yaml
configs/experiments/: ablation_topolora.yaml  benchmark_matrix.yaml  benchmark_sl_ssdd_seed0.yaml  benchmark_sl_ssdd_seed1.yaml  benchmark_sl_ssdd_seed2.yaml  cross_dataset.yaml
configs/models/: deeplabv3p.yaml  mask2former.yaml  sam_topolora.yaml  segformer.yaml  unet.yaml
scripts/: benchmark_status.py  download_hf_datasets.py  download_sam_weights.py  download_sl_ssdd.py  export_tables.py  make_all_figures.py  make_all_figures.sh  make_paper_figures.py  make_paper_figures.sh  run_ablation_parallel.sh  run_all_benchmarks.sh  run_cross_dataset_parallel.sh  run_sl_ssdd_benchmarks_parallel.sh  sanity_check.py
seglab/: __init__.py  eval.py  sweep.py  train.py
seglab/data/: __init__.py  hf_kvasir.py  hf_retina.py  sl_ssdd.py  splits.py  transforms.py
seglab/metrics/: __init__.py  calibration.py  segmentation.py  topology.py
seglab/models/: __init__.py  deeplabv3p_smp.py  mask2former_d2.py  segformer_hf.py  unet_smp.py
seglab/models/sam_peft/: __init__.py  adapters.py  lora.py  model.py  sam_loader.py  topo_losses.py
seglab/utils/: __init__.py  env.py  io.py  registry.py  seed.py  viz.py
